@@ -21,6 +21,10 @@ Apply a 1Hz DC filter to input data (requires more
 CPU)
 .TP
 .B
+\fB--enable-biastee\fP
+Enable bias tee on supporting interfaces (default: disabled)
+.TP
+.B
 \fB--debug\fP=<flags>
 Debug mode (verbose), see flags below
 .TP
